--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           command:    mix deps.compile
       - run:
           name:       Compile protocols
-          command:    mix compile --warnings-as-errors
+          command:    mix compile
       # - run:
       #     name:       Style checks
       #     command:    mix credo --strict
