--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,9 +28,9 @@ jobs:
       # - run:
       #     name:       Style checks
       #     command:    mix credo --strict
-      - run:
-          name:       Test
-          command:    mix test
+      # - run:
+      #     name:       Test
+      #     command:    mix test
       # - run:
       #     name:       Dialyzer type checks
       #     command:    mix dialyzer --halt-exit-status
